assets/sass/theme/_woocommerce.scss
#container {
	width: 1300px;
	margin: 0 auto;
}
.woocommerce-pagination, .woocommerce-ordering, .woocommerce-breadcrumb, .woocommerce-result-count {
	display: none;
}
#temp_load {
	&:before {
		content:"";
		clear: both;
		float: none;
		display: block;
	}
	display: block;
	text-align: center;
	line-height: 80px;
	margin-top: 50px;
	i {
		font-size: 24pt;
		color: $grey;
	}
}
.single-product {
	.woocommerce-error {
		margin-top: 50px;
	}
	#sidebar {
		display: none;
	}
	span {
		&.onsale {
			display: none;
		}
	}
}
.star-rating {
	text-align: center;
	overflow: hidden;
	position: relative;
	height: 1em;
	line-height: 1em;
	font-size: 1em;
	width: 5.4em;
	font-family: 'star';
	text-align: right;
	color: #ccc;
	margin: 0 auto 15px;
	&:before {
		content: "\73\73\73\73\73";
		display: inline-block;
	}
	span {
		overflow: hidden;
		display: inline-block;
		color: $yellow !important;
	}
	span:before {
		content: "\53\53\53\53\53";
		display: inline-block;
	}
}
.stars {
	a {
		color: $grey !important;
	}
}
.woocommerce {
	input.button, input.button:disabled, input.button:disabled[disabled], #place_order {
		display: inline-block;
		position: relative;
		top: auto;
		left: auto;
		background: $blue;
		color: white;
		border: none;
		box-shadow: none;
		text-transform: uppercase;
		font-family: 'cocogoose', sans-serif;
		font-size: 14pt;
		line-height: 40px;
		padding: 0 15px;
		height: auto;
		@include transform(translate(0,0));
		@include border-top-radius(0);
		@include border-bottom-radius(0);
		@include transition(all 0.3s $authenticMotion);
	}
	input.button {
		&:hover {
			color: white;
			background: darken($blue, 10%);
			@include transition(all 0.3s $authenticMotion);
		}
	}
	input.button:disabled, input.button:disabled[disabled] {
		background: $lightgrey;
		color: $grey;
	}
	ul.products {
		list-style: none;
		margin: 0 0 0;
		padding: 0;
		.star-rating {
			text-align: center;
			overflow: hidden;
			position: relative;
			height: 1em;
			line-height: 1em;
			font-size: 1em;
			width: 5.4em;
			font-family: 'star';
			text-align: right;
			color: #ccc;
			margin: 0 auto 15px;
			&:before {
				content: "\73\73\73\73\73";
				display: inline-block;
			}
			span {
				overflow: hidden;
				display: inline-block;
				color: $yellow !important;
			}
			span:before {
				content: "\53\53\53\53\53";
				display: inline-block;
			}
		}
		li.product {
			float: none;
			position: relative;
			width: 24%;
			margin: 0 1% 1% -4px;
			display: inline-block;
			box-sizing: border-box;
			text-align: center;
			vertical-align: top;
			min-height: 475px;
			border: 1px solid $lightgrey;
			position: relative;
			@include transform(translate(0,50px));
			opacity: 0;
			@include transition(all 0.3s $authenticMotion);
			&:nth-child(4) {
				margin-right: 0;
			}
			&.load {
				@include transform(translate(0,0));
				opacity: 1;
				@include transition(all 0.3s $authenticMotion);
			}
			h3 {
				box-sizing: border-box;
				padding: 0 25px;
				line-height: 18pt;
				margin: 5px 0 15px;
			}
			h2.woocommerce-loop-product__title {
				font-size: 14pt;
				line-height: 18pt;
				box-sizing: border-box;
				padding: 0 15px;
				margin-bottom: 15px;
			}
			a {
				font-family: 'Shadows Into Light', cursive;
				color: $grey;
				img {
					max-width: 100%;
					height: auto;
				}
				.price {
					font-family: 'cocogoose', sans-serif;
					font-size: 18pt;
					color: $teal;
					vertical-align: middle;
					display: inline-block;
					margin: 0;
					del {
						font-size: 12pt;
						color: $grey;
						vertical-align: middle;
						opacity: 0.25;
					}
					ins {
						text-decoration: none;
					}
				}
				&.add_to_cart_button {
					color: white;
					background: $blue;
					font-family: 'din light', sans-serif;
					line-height: 30px;
					display: inline-block;
					padding: 0 10px;
					vertical-align: middle;
					text-transform: uppercase;
					letter-spacing: 1px;
					margin: 0;
					font-size: 8pt;
				}
				.onsale {
					background: $teal;
					color: white;
					position: absolute;
					top: 0;
					left: 0;
					right: auto;
					padding: 0 15px;
					letter-spacing: 1px;
					margin: 0;
					font-size: 14pt;
					min-height: auto;
					line-height: 28pt;
					@include border-top-radius(0);
					@include border-bottom-radius(0);
				}
			}
		}
	}
	table {
		&.shop_table {
			td, th {
				padding: 10px;
			}
			th {
				text-transform: uppercase;
				letter-spacing: 1px;
				font-weight: bold;
			}
			tr.order-total td {
				font-family: 'cocogoose', sans-serif;
				font-size: 18pt;
				letter-spacing: 1px;
				color: $teal;
			}
		}
		tfoot {
			th {
				text-align: right;
				border-right: 1px solid $lightgrey;
			}
		}
	}
	#place_order {
		display: block;
		float: none;
		width: 100%;
		line-height: 60px;
		height: 60px;
	}
	#reviews {
		#comments {
			h2 {
				text-align: center;
				&.woocommerce-Reviews-title {
					display: none;
				}
			}
			ol.commentlist {
				margin: 0;
				padding: 0;
			}
		}
	}
}
/* ... */

